<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/ic_login_icon" />

    <EditText
        android:id="@+id/login_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_input"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ripple_input"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_accent"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/ask_no_account"
        android:textColor="@color/colorAccentDark"
        android:textSize="14sp" />

    <Button
        android:id="@+id/login_register_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_accent"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/register" />

</LinearLayout>