<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:gravity="center_horizontal"
        android:text="@string/enter_info"
        android:textColor="@color/colorAccentDark"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_input"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLines="1"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_input"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_input"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="38dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_input"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/register"
        android:layout_width="220dp"
        android:layout_height="46dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button_negative"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/register"
        android:textColor="@android:color/background_light" />
</LinearLayout>